@@ -25,7 +25,7 @@
 #	o man format reference manual.
 #	o texinfo format reference manual.
 #
-@HEADER	HTAGS,2,April 2002,GNU Project
+@HEADER	HTAGS,9,May 2002,GNU Project
 @NAME	htags - generate hypertext from source code.
 @SYNOPSIS
 	@name{htags} [-a][-c][-f][-F][-m][-n][-o][-s][-v][-w][-d @arg{dir}][-S @arg{dir}][-t @arg{title}][@arg{dir}]
@@ -52,6 +52,9 @@
 		You need to set up an HTTP server so that @xref{gzip,1}
 		is invoked for each compressed file.
 		See @file{HTML/.htaccess} that is generated by htags.
+	@item{@option{-d}, @option{--dbpath} @arg{dir}}
+		Specifies the directory in which @file{GTAGS} and @file{GRTAGS}
+		exist. The default is the current directory.
 	@item{@option{-f}, @option{--form}}
 		Support search form using CGI program.
 		You need to set up an HTTP server for this.
@@ -66,13 +69,8 @@
 	@item{@option{-o}, @option{--other}}
 		Pick up not only source files but also other files except for
 		binary files.
-	@item{@option{-v}, @option{--verbose}}
-		Verbose mode.
-	@item{@option{-w}, @option{--warning}}
-		Print warning messages.
-	@item{@option{-d}, @option{--dbpath} @arg{dir}}
-		Specifies the directory in which @file{GTAGS} and @file{GRTAGS}
-		exist. The default is the current directory.
+	@item{@option{--style-sheet} @arg{file}}
+		Load style sheet file and insert it into <HEAD> tag.
 	@item{@option{-S}, @option{--secure-cgi} @arg{dir}}
 		write cgi script into @arg{dir} to realize a centralised
 		cgi script. Script alias is @file{/cgi-bin} by default.
@@ -81,6 +79,10 @@
 	@item{@option{-t}, @option{--title} @arg{title}}
 		The @arg{title} of this hypertext. The default is the last
 		component of the current directory.
+	@item{@option{-v}, @option{--verbose}}
+		Verbose mode.
+	@item{@option{-w}, @option{--warning}}
+		Print warning messages.
 	@item{@arg{dir}}
 		The directory in which hypertext is generated.
 		The default is the current directory.
