@@ -23,6 +23,7 @@ At least, you had better search '[INCOMPATIBLE CHANGES]' for each version.
 Current version - **** ** ****, by Shigio Yamaguchi
 
 * htags: -m(--main-func) option added.
+* htags: --style-sheet=<style file> option added.
 * gctags: --langmap option added.
 
 Version 4.4 - March 30 2002, by Shigio Yamaguchi
